# datashader

./: .appveyor.yml  .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CNAME  CODE_OF_CONDUCT.md  FAQ.html  MANIFEST.in  README.md  ROADMAP.md  about.html  ak_vs_sp.py  api.html  appveyor.yml  dodo.py  env.yaml  examples  genindex.html  hatch.toml  index.html  natural_earth.ipynb  nyc_buildings.ipynb  nyc_buildings_zoom.ipynb  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  readthedocs.yml  releases.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tiling.html  (+2 more)
.github/: codecov.yml  issue_template.md
.github/workflows/: build.yaml  docs.yaml  downstream_tests.yaml  gpu_test.yaml  nightly_lock.yaml  test.yaml
_modules/: index.html
_modules/datashader/: bundling.html  core.html  pipeline.html  reductions.html  transfer_functions.html
_static/: documentation_options.js  pygments.css  webpack-macros.html
_static/css/: custom.css
benchmarks/: README.md  asv.conf.json
benchmarks/benchmarks/: common.py  line.py  shade.py
conda.recipe/: build.sh  meta.yaml  readme.md  run_test.py
conda.recipe/base/: meta.yaml
conda.recipe/examples/: meta.yaml
datashader/: __init__.py  __main__.py  __version.py  _dependencies.py  _resampling.py  aggregates.py  antialias.py  awkward_sindex.py  bokeh.py  bokeh_ext.py  bundling.py  callbacks.py  cmd.py  colors.py  compatibility.py  compiler.py  composite.py  core.py  dask.py  datatypes.py  dispatch.py  enums.py  expr.py  fft_bundling.py  geo.py  glyphs.py  layout.py  macros.py  mpl_ext.py  pandas.py  pipeline.py  pyspark.py  reductions.py  resampling.py  tiles.py  transfer_functions.py  util.py  utils.py  xarray.py
datashader/backends/: __init__.py  compiler.py  glyph.py  pandas.py  reductions.py  util.py
datashader/benchmarks/: test_bundling.py  test_extend_line.py  test_layout.py
datashader/data_libraries/: __init__.py  cudf.py  dask.py  dask_cudf.py  dask_xarray.py  narwhals.py  pandas.py  xarray.py
datashader/datashape/: __init__.py  _version.py  coretypes.py  discovery.py  dispatch.py  error.py  internal_utils.py  lexer.py  parser.py  predicates.py  promote.py  py2help.py  type_symbol_table.py  typesets.py  user.py  validation.py
datashader/examples/: conftest.py  datasets.yml  download_sample_data.py  nb  nyc_taxi-nongeo.ipynb  streaming-aggregation.ipynb  taxi_preprocessing_example.py
datashader/geom/: __init__.py  base.py  lines.py  points.py  polygons.py
datashader/glyphs/: __init__.py  area.py  glyph.py  line.py  points.py  polygon.py  quadmesh.py  trimesh.py
datashader/spatial/: __init__.py  hilbert_curve.py  points.py  proximity.py  viewshed.py  zonal.py
datashader/tests/: conftest.py  test_aggregates.py  test_antialias.py  test_bokeh_ext.py  test_bundling.py  test_colors.py  test_compatibility.py  test_composite.py  test_dask.py  test_datatypes.py  test_expr.py  test_geo.py  test_geom.py  test_geopandas.py  test_glyphs.py  test_imports.py  test_layout.py  test_macros.py  test_mpl_ext.py  test_narwhals.py  test_pandas.py  test_pipeline.py  test_polygons.py  test_proximity.py  test_pyspark.py  test_quadmesh.py  test_raster.py  test_reductions.py  test_spatial.py  test_tiles.py  test_transfer_functions.py  test_util.py  test_utils.py  test_viewshed.py  test_xarray.py  test_zonal.py  utils.py
datashader/transfer_functions/: __init__.py  _cpu_utils.py  _cuda_utils.py
doc/: README.md  about.rst  api.rst  conf.py  index.rst  latest_news.html  reduction.csv  releases.rst
doc/_static/: site.css
doc/_templates/: layout.html
doc/getting_started/: index.rst
doc/topics/: index.rst
doc/user_guide/: index.rst
docs/: FAQ.rst  Makefile  README.md  README.rst  api.rst  conf.py  environment.yml  index.rst  make.bat  performance.rst
examples/: FAQ.ipynb  LiDAR-dask.ipynb  LiDAR-datashader.ipynb  README.md  bokeh_standard.py  census-congressional.ipynb  census-hv-dask.ipynb  census-hv.ipynb  census.ipynb  conftest.py  dashboard.ipynb  dashboard.py  dashboard.yml  datasets.yml  datashader.ipynb  download_sample_data.py  edge_bundling.ipynb  environment.yml  fastparquet.type_mismatch.patch  filetimes.py  filetimes.sh  filetimes.yml  get_raster_data.sh  holoviews_datashader.ipynb  hover_layer.ipynb  index.ipynb  landsat.ipynb  legends.ipynb  lidar.ipynb  lidar_dask.ipynb  nb  nyc_taxi-nongeo.ipynb  nyc_taxi-paramnb.ipynb  nyc_taxi.ipynb  nyc_taxi_map.py  opensky.ipynb  osm-1billion.ipynb  osm.ipynb  packet_capture_graph.ipynb  pcap_to_parquet.py  (+16 more)
getting_started/: Interactivity.html  Introduction.html  Pipeline.html  index.html
scripts/: download_data.py
topics/: index.html
user_guide/: Extending.html  Geography.html  Geopandas.html  Inspection_Reductions.html  Networks.html  Performance.html  Plotting_Pitfalls.html  Points.html  Polygons.html  Timeseries.html  Trajectories.html  Trimesh.html  index.html
(+159 files in other folders)
